# ventoy-toybox

./: .justfile  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.yaml
src/: app.rs  defines.rs  feeds.rs  lib.rs  main.rs
src/core/: mod.rs  update.rs  utils.rs
src/gui/: app.rs  mod.rs
