[package]
name = "ventoy-toybox"
version = "0.2.2"
edition = "2021"
authors = ["nozwock <57829219+nozwock@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
confy = "0.5.1"
eframe = { version = "0.19.0" }
# features = ["persistence"]
ehttp = "0.2.0"
poll-promise = "0.2.0"
reqwest = "0.11.12"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
ureq = { version = "2.5.0", features = ["json"] }

[build-dependencies]
# https://github.com/mxre/winres/issues/40
winres = { git = "https://github.com/Nilstrieb/winres", branch = "linking-flags" }

[target.'cfg(target_os = "linux")'.dependencies]
flate2 = "1.0.24"
tar = "0.4.38"

[target.'cfg(target_os = "windows")'.dependencies]
zip = "0.6.3"

[profile.release]
opt-level = "s"
strip = true
lto = true

[package.metadata.winres]
