[package]
name = "ventoy-toybox"
version = "0.2.4"
edition = "2021"
authors = ["nozwock <57829219+nozwock@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
poll-promise = "0.2"
ehttp = "0.2"
eframe = { version = "0.19" } # features = ["persistence"]
dirs = "4.0"

[build-dependencies]
# https://github.com/mxre/winres/issues/40
winres = { git = "https://github.com/Nilstrieb/winres", branch = "linking-flags" }

[target.'cfg(target_os = "linux")'.dependencies]
flate2 = "1.0"
tar = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
zip = "0.6"

[profile.release]
opt-level = "s"
strip = true
lto = true

[package.metadata.winres]
