[package]
name = "ventoy-toybox"
version = "0.4.1"
edition = "2021"
authors = ["nozwock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
poll-promise = "0.2"
ehttp = "0.2"
eframe = { version = "0.19" } # features = ["persistence"]
dirs = "4.0"
image = { version = "0.24", optional = true }
confy = { version = "0.5.1", default-features = false, features = ["ron_conf"] }

[build-dependencies]
# https://github.com/mxre/winres/issues/40
winres = { git = "https://github.com/Nilstrieb/winres", branch = "linking-flags" }

[target.'cfg(target_os = "linux")'.dependencies]
flate2 = "1.0"
tar = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
zip = "0.6"
windows = { version = "0.43", features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
# increases the binary size by around 0.8-1mB, so this is not going to be default
# any smaller alternative crate?
app-icon = ["image"]

[dev-dependencies]
tempdir = "0.3"
ureq = "2.5"

[profile.release]
strip = true
opt-level = "s"
lto = true
panic = "abort" # windows releases have stdout disabled anyways

[package.metadata.winres]
